# cgb

./: CMakeLists.txt  README.md
src/: args.cpp  args.hpp  cgb.cpp  cgb.h  cgb_buffer.hpp  fifo.cpp  fifo.hpp  file_handle.cpp  file_handle.hpp  main.cpp  msg_queue.cpp  msg_queue.hpp  serial_io.cpp  serial_io.hpp
